--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1452,7 +1452,7 @@ QwJMAlcCWwJpAnACeQKPApQClwKkAqkAAAAAAAACAQAAAAAAAAAoAAAAAAAAAAAAAAAAAAACuw==}}
 	Volume = {13},
 	Year = {2003}}
 
-@article{Hudak96buildingdomain-specific,
+@article{Hudak96_DSEL,
 	Author = {Paul Hudak},
 	Date-Added = {2011-09-29 10:13:15 +0200},
 	Date-Modified = {2011-09-29 10:13:15 +0200},
