--- a/papers/gpce2013/biblio.bib
+++ b/papers/gpce2013/biblio.bib
@@ -1,3 +1,25 @@
+@inproceedings{Huang10_Perf,
+  title={Anatomizing application performance differences on smartphones},
+  author={Huang, Junxian and Xu, Qiang and Tiwana, Birjodh and Mao, Z Morley and Zhang, Ming and
+Bahl, Paramvir},
+  booktitle={Proceedings of the 8th international conference on Mobile systems, applications, and
+services},
+  pages={165--178},
+  year={2010},
+  organization={ACM}
+}
+
+@article{Souders08_Perf,
+  title={High-performance web sites},
+  author={Souders, Steve},
+  journal={Communications of the ACM},
+  volume={51},
+  number={12},
+  pages={36--41},
+  year={2008},
+  publisher={ACM}
+}
+
 @article{Van00_DSL,
   title={Domain-specific languages: an annotated bibliography},
   author={Van Deursen, Arie and Klint, Paul and Visser, Joost},
