--- a/papers/sle2013/biblio.bib
+++ b/papers/sle2013/biblio.bib
@@ -17,6 +17,45 @@
  address = {New York, NY, USA},
 } 
 
+@inproceedings{Gal:2009:TJT:1542476.1542528,
+ author = {Gal, Andreas and Eich, Brendan and Shaver, Mike and Anderson, David and Mandelin, David and Haghighat, Mohammad R. and Kaplan, Blake and Hoare, Graydon and Zbarsky, Boris and Orendorff, Jason and Ruderman, Jesse and Smith, Edwin W. and Reitmaier, Rick and Bebenita, Michael and Chang, Mason and Franz, Michael},
+ title = {Trace-based just-in-time type specialization for dynamic languages},
+ booktitle = {Proceedings of the 2009 ACM SIGPLAN conference on Programming language design and implementation},
+ series = {PLDI '09},
+ year = {2009},
+ isbn = {978-1-60558-392-1},
+ location = {Dublin, Ireland},
+ pages = {465--478},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1542476.1542528},
+ doi = {10.1145/1542476.1542528},
+ acmid = {1542528},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamically typed languages, trace-based compilation},
+} 
+[download]
+@article{Gal:2009:TJT:1543135.1542528,
+ author = {Gal, Andreas and Eich, Brendan and Shaver, Mike and Anderson, David and Mandelin, David and Haghighat, Mohammad R. and Kaplan, Blake and Hoare, Graydon and Zbarsky, Boris and Orendorff, Jason and Ruderman, Jesse and Smith, Edwin W. and Reitmaier, Rick and Bebenita, Michael and Chang, Mason and Franz, Michael},
+ title = {Trace-based just-in-time type specialization for dynamic languages},
+ journal = {SIGPLAN Not.},
+ issue_date = {June 2009},
+ volume = {44},
+ number = {6},
+ month = jun,
+ year = {2009},
+ issn = {0362-1340},
+ pages = {465--478},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1543135.1542528},
+ doi = {10.1145/1543135.1542528},
+ acmid = {1542528},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dynamically typed languages, trace-based compilation},
+} 
+
+
 
 @inproceedings{Cooper07_Links,
   title={Links: Web programming without tiers},
