--- a/papers/sle2013/macros.tex
+++ b/papers/sle2013/macros.tex
@@ -42,14 +42,14 @@ then, types, while, use},%
   morestring=[b]',%
   showstringspaces=false%
 }[keywords,comments,strings]%
-
 \lstset{language=Scala,%
   mathescape=false,%
 %  columns=[c]fixed,%
   aboveskip=\smallskipamount,
   belowskip=\smallskipamount,
 %  basewidth={0.5em, 0.4em},%
-  basicstyle=\ttfamily\scriptsize,%
+  basicstyle=\scriptsize,%
+  captionpos=b,
   keywordstyle=\bfseries%\sffamily\bfseries,%
 %  keywordstyle=\sffamily\bfseries,%
 %  xleftmargin=0.5cm
