--- a/papers/gpce2013/macros.tex
+++ b/papers/gpce2013/macros.tex
@@ -2,7 +2,6 @@
 \usepackage{listings}
 %\usepackage[scaled]{luximono}
 
-
 %\usepackage{natbib}
 
 % ----- begin macros
@@ -49,7 +48,8 @@ then, types, while, use},%
   aboveskip=\smallskipamount,
   belowskip=\smallskipamount,
 %  basewidth={0.5em, 0.4em},%
-  basicstyle=\ttfamily\scriptsize,%
+  basicstyle=\footnotesize,%
+  captionpos=b,
   keywordstyle=\bfseries%\sffamily\bfseries,%
 %  keywordstyle=\sffamily\bfseries,%
 %  xleftmargin=0.5cm
@@ -60,7 +60,7 @@ then, types, while, use},%
 
 \lstnewenvironment{slisting}{\lstset{language=Scala}}{}
 
-\newcommand{\code}[1]{\lstinline[language=Scala,columns=fixed,basicstyle=\ttfamily\small]|#1|}
+\newcommand{\code}[1]{\lstinline[language=Scala,columns=fixed,basicstyle=\footnotesize]|#1|}
 
 \def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
 \let\endchangemargin=\endlist
